Implemented Active Teams Endpoint and Tests